# Viewer3D_v2.0

./: CMakeLists.txt  Makefile  README_RUS.md
src/: man_ru.texi
src/backend/: common_backend.h  main_back_end.cc  main_back_end.h  model_transform.cc  model_transform.h  parser.cc  parser.h  validator_file_obj.cc  validator_file_obj.h
src/controller/: controller.cc  controller.h
src/front/: common_front.h  main_window.cc  main_window.h  main_window.ui  model_settings.cc  model_settings.h  widget_draw.cc  widget_draw.h
src/includes/qtgifimage/src/gifimage/: qgifimage.cpp
src/main/: main.cc
src/tests/: test.cc
